--- a/packages/fluent/scss/toolbar/_layout.scss
+++ b/packages/fluent/scss/toolbar/_layout.scss
@@ -7,8 +7,8 @@
     // Base
     .k-toolbar {
         margin: 0;
-        padding-inline: var( --kendo-toolbar-padding-x, #{$kendo-toolbar-padding-x} );
-        padding-block: var( --kendo-toolbar-padding-y, #{$kendo-toolbar-padding-y} );
+        padding-inline: var( --INTERNAL--kendo-toolbar-padding-x, 0 );
+        padding-block: var( --INTERNAL--kendo-toolbar-padding-y, 0 );
         border-width: var( --kendo-toolbar-border-width, #{$kendo-toolbar-border-width} );
         border-style: solid;
         box-sizing: border-box;
@@ -19,7 +19,7 @@
         list-style: none;
         display: flex;
         flex-flow: row wrap;
-        gap: var( --kendo-toolbar-spacing, #{$kendo-toolbar-spacing} );
+        gap: var( --INTERNAL--kendo-toolbar-spacing, 0 );
         align-items: center;
         justify-content: flex-start;
         position: relative;
@@ -31,7 +31,7 @@
         &::before {
             content: "";
             height: $kendo-button-inner-calc-size;
-            margin-inline-start: -#{$kendo-toolbar-spacing};
+            margin-inline-start: calc( var( --INTERNAL--kendo-toolbar-spacing, 0 ) * -1 );
         }
 
         &.k-toolbar-resizable {
@@ -45,7 +45,7 @@
             vertical-align: middle;
 
             > label {
-                margin-inline-end: var( --kendo-toolbar-spacing, #{$kendo-toolbar-spacing} );
+                margin-inline-end: var( --INTERNAL--kendo-toolbar-spacing, 0 );
                 align-self: center;
             }
         }
@@ -60,24 +60,8 @@
         }
 
         // Overflow anchor
-        .k-overflow-anchor {
-            @include border-radius( 0 );
-            margin: 0;
-            padding-block: var( --kendo-toolbar-padding-y, #{$kendo-toolbar-padding-y} );
-            width: auto;
-            height: 100%;
-            aspect-ratio: 1;
-            border-width: 0;
-            border-color: inherit;
-            box-sizing: border-box;
-            justify-content: center;
-            position: absolute;
-            inset-block-start: 0;
-            inset-inline-end: 0;
-
-            &::before {
-                display: block;
-            }
+        .k-toolbar-overflow-button {
+            margin-inline-start: auto;
         }
 
         // Separator
@@ -94,12 +78,6 @@
         .k-toolbar-spacer {
             height: calc( var( --kendo-toolbar-line-height, #{$kendo-toolbar-line-height} ) * 1em );
             flex: 1 0 0%;
-        }
-
-        // Template
-        .k-toolbar-template {
-            align-self: center;
-            align-items: center;
         }
 
         // Template item
@@ -120,12 +98,66 @@
     }
 
     // Angular specific
-    kendo-toolbar-renderer {
+    .k-toolbar-renderer {
         display: inline-block;
         border-color: inherit;
     }
 
-    // Overflow container
+    // Toolbar sizes
+    @each $size, $size-props in $kendo-toolbar-sizes {
+        $_padding-x: map-get( $size-props, padding-x );
+        $_padding-y: map-get( $size-props, padding-y );
+        $_spacing: map-get( $size-props, spacing );
+
+        .k-toolbar-#{$size} {
+            --INTERNAL--kendo-toolbar-padding-x: var( --kendo-toolbar-#{$size}-padding-x, #{$_padding-x} );
+            --INTERNAL--kendo-toolbar-padding-y: var( --kendo-toolbar-#{$size}-padding-y, #{$_padding-y} );
+            --INTERNAL--kendo-toolbar-spacing: var( --kendo-toolbar-#{$size}-spacing, #{$_spacing} );
+        }
+    }
+    // Remove once we decide to not size empty containers
+    .k-toolbar-sm::before {
+        height: var( --kendo-button-inner-calc-size-sm, #{$kendo-button-inner-calc-size-sm} );
+    }
+    .k-toolbar-md::before {
+        height: var( --kendo-button-inner-calc-size-md, #{$kendo-button-inner-calc-size-md} );
+    }
+    .k-toolbar-lg::before {
+        height: var( --kendo-button-inner-calc-size-lg, #{$kendo-button-inner-calc-size-lg} );
+    }
+
+    // sass-lint:disable class-name-format
+    .k-floating-toolbar,
+    .editorToolbarWindow.k-window-content {
+        padding-inline: var( --kendo-toolbar-padding-x-md, #{$kendo-toolbar-padding-x-md} ) !important; // sass-lint:disable-line no-important
+        padding-block: var( --kendo-toolbar-padding-y-md, #{$kendo-toolbar-padding-y-md} ) !important; // sass-lint:disable-line no-important
+        border-width: var( --kendo-toolbar-border-width, #{$kendo-toolbar-border-width} );
+        border-style: solid;
+        display: flex;
+        flex-flow: row nowrap;
+        gap: var( --kendo-toolbar-spacing-md, #{$kendo-toolbar-spacing-md} );
+        align-items: center;
+
+        .k-toolbar {
+            padding: 0;
+            border-width: 0;
+            flex-shrink: 1;
+            color: inherit;
+            background: none;
+        }
+    }
+
+    .k-editortoolbar-dragHandle {
+        cursor: move;
+        display: flex;
+        align-items: center;
+        align-self: stretch;
+        flex-shrink: 0;
+    }
+
+
+    // Remove once the Overflow Popup uses
+    // the proper Menu rendering in all suites.
     .k-overflow-container {
         font-size: var( --kendo-menu-popup-font-size-md, inherit );
         line-height: var( --kendo-menu-popup-line-height-md, normal );
@@ -189,33 +221,6 @@
         }
     }
 
-    // sass-lint:disable class-name-format
-    .k-floating-toolbar,
-    .editorToolbarWindow.k-window-content {
-        padding-inline: var( --kendo-toolbar-padding-x, #{$kendo-toolbar-padding-x} ) !important; // sass-lint:disable-line no-important
-        padding-block: var( --kendo-toolbar-padding-y, #{$kendo-toolbar-padding-y} ) !important; // sass-lint:disable-line no-important
-        border-width: var( --kendo-toolbar-border-width, #{$kendo-toolbar-border-width} );
-        border-style: solid;
-        display: flex;
-        flex-flow: row nowrap;
-        gap: var( --kendo-toolbar-spacing, #{$kendo-toolbar-spacing} );
-        align-items: center;
-
-        .k-toolbar {
-            padding: 0;
-            border-width: 0;
-            flex-shrink: 1;
-            color: inherit;
-            background: none;
-        }
-    }
-
-    .k-editortoolbar-dragHandle {
-        cursor: move;
-        display: flex;
-        align-items: center;
-        align-self: stretch;
-        flex-shrink: 0;
-    }
-
 }
+
+
