--- a/packages/material/scss/toolbar/_variables.scss
+++ b/packages/material/scss/toolbar/_variables.scss
@@ -1,29 +1,87 @@
 // Toolbar
 
-/// The horizontal padding of the container.
+/// The horizontal padding of the toolbar.
 /// @group toolbar
-$toolbar-padding-x: k-map-get( $spacing, 2 ) !default;
-/// The vertical padding of the container.
+$kendo-toolbar-padding-x: null !default;
+$kendo-toolbar-padding-x-sm: map-get( $spacing, 1 ) !default;
+$kendo-toolbar-padding-x-md: map-get( $spacing, 2 ) !default;
+$kendo-toolbar-padding-x-lg: map-get( $spacing, 2 ) + map-get( $spacing, thin ) !default;
+
+/// The vertical padding of the toolbar.
 /// @group toolbar
-$toolbar-padding-y: k-map-get( $spacing, 2 ) !default;
-$toolbar-border-width: 0 !default;
-$toolbar-border-radius: null !default;
-$toolbar-spacing: $toolbar-padding-x !default;
+$kendo-toolbar-padding-y: null !default;
+$kendo-toolbar-padding-y-sm: map-get( $spacing, 1 ) !default;
+$kendo-toolbar-padding-y-md: map-get( $spacing, 2 ) !default;
+$kendo-toolbar-padding-y-lg: map-get( $spacing, 2 ) + map-get( $spacing, thin ) !default;
 
-$toolbar-font-family: $font-family !default;
-$toolbar-font-size: $font-size !default;
-$toolbar-line-height: k-math-div( 20, 14 ) !default;
+/// The spacing betweem the toolbar tools.
+/// @group toolbar
+$kendo-toolbar-spacing: null !default;
+$kendo-toolbar-spacing-sm: map-get( $spacing, 1 ) + map-get( $spacing, thin ) !default;
+$kendo-toolbar-spacing-md: map-get( $spacing, 2 ) !default;
+$kendo-toolbar-spacing-lg: map-get( $spacing, 2 ) + map-get( $spacing, thin ) !default;
 
-$toolbar-inner-calc-size: calc( #{$kendo-button-calc-size} + #{$toolbar-padding-y * 2} ) !default;
+/// Width of the border around the toolbar.
+/// @group toolbar
+$kendo-toolbar-border-width: 0 !default;
+/// Border radius of the toolbar.
+/// @group toolbar
+$kendo-toolbar-border-radius: null !default;
 
-$toolbar-bg: $component-bg !default;
-$toolbar-text: $component-text !default;
-$toolbar-border: null !default;
-$toolbar-gradient: null !default;
-$toolbar-shadow: $box-shadow-depth-2 !default;
+/// Font family of the toolbar.
+/// @group toolbar
+$kendo-toolbar-font-family: $font-family !default;
+/// Font size of the toolbar.
+/// @group toolbar
+$kendo-toolbar-font-size: $font-size !default;
+/// Line height of the toolbar.
+/// @group toolbar
+$kendo-toolbar-line-height: k-math-div( 20, 14 ) !default;
 
-$toolbar-separator-border: $component-border !default;
+/// Background color of the toolbar.
+/// @group toolbar
+$kendo-toolbar-bg: $component-bg !default;
+/// Text color of the toolbar.
+/// @group toolbar
+$kendo-toolbar-text: $component-text !default;
+/// Color of the border around the toolbar.
+/// @group toolbar
+$kendo-toolbar-border: null !default;
+/// Gradient of the toolbar.
+/// @group toolbar
+$kendo-toolbar-gradient: null !default;
+/// Box shadow of the toolbar.
+/// @group toolbar
+$kendo-toolbar-shadow: $box-shadow-depth-2 !default;
 
-$toolbar-input-width: 10em !default;
+/// Color of the separator border of the toolbar.
+/// @group toolbar
+$kendo-toolbar-separator-border: $component-border !default;
 
-$toolbar-item-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px rgba(0, 0, 0, .14), 0 1px 10px rgba(0, 0, 0, .12) !default;
+/// The width of the input in the toolbar.
+/// @group toolbar
+$kendo-toolbar-input-width: 10em !default;
+
+/// Box shadow of the focused toolbar item.
+/// @group toolbar
+$kendo-toolbar-item-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px rgba(0, 0, 0, .14), 0 1px 10px rgba(0, 0, 0, .12) !default;
+
+/// Sizes map for the toolbar.
+/// @group toolbar
+$kendo-toolbar-sizes: (
+    sm: (
+        padding-x: $kendo-toolbar-padding-x-sm,
+        padding-y: $kendo-toolbar-padding-y-sm,
+        spacing: $kendo-toolbar-spacing-sm
+    ),
+    md: (
+        padding-x: $kendo-toolbar-padding-x-md,
+        padding-y: $kendo-toolbar-padding-y-md,
+        spacing: $kendo-toolbar-spacing-md
+    ),
+    lg: (
+        padding-x: $kendo-toolbar-padding-x-lg,
+        padding-y: $kendo-toolbar-padding-y-lg,
+        spacing: $kendo-toolbar-spacing-lg
+    )
+) !default;
