fix(signature): apply opacity to the disabled signature in fluent

--- a/packages/fluent/scss/signature/_layout.scss
+++ b/packages/fluent/scss/signature/_layout.scss
@@ -19,6 +19,12 @@
                 border-bottom-width: var( --kendo-signature-maximized-line-width, #{$kendo-signature-maximized-line-width} );
             }
         }
+
+        &:disabled,
+        &[disabled],
+        &.k-disabled {
+            opacity: var( --kendo-signature-disabled-opacity, #{$kendo-signature-disabled-opacity} );
+        }
     }
 
     .k-signature-actions {
