chore: add styles for data table in adaptive action sheet

--- a/packages/default/scss/action-sheet/_layout.scss
+++ b/packages/default/scss/action-sheet/_layout.scss
@@ -313,6 +313,13 @@
             height: 100%;
             overflow-y: auto;
         }
+
+        .k-data-table {
+            max-height: 100%;
+            overflow: hidden;
+            display: flex;
+            flex-flow: column nowrap;
+        }
     }
 
 }
