feat(icon): add clock-arrow-rotate icon

--- a/packages/default/scss/icons/_layout.scss
+++ b/packages/default/scss/icons/_layout.scss
@@ -478,6 +478,7 @@
     .k-i-stick::before { content: "\e15a"; }
     .k-i-unstick::before { content: "\e15b"; }
     .k-i-set-column-position::before { content: "\e15c"; }
+    .k-i-clock-arrow-rotate::before { content: "\e15d"; }
     .k-i-play::before { content: "\e200"; }
     .k-i-pause::before { content: "\e201"; }
     .k-i-stop::before { content: "\e202"; }
