--- a/packages/fluent/scss/coloreditor/_theme.scss
+++ b/packages/fluent/scss/coloreditor/_theme.scss
@@ -24,4 +24,9 @@
         );
     }
 
+    .k-coloreditor .k-colorgradient:focus,
+    .k-coloreditor .k-colorgradient.k-focus {
+        box-shadow: none;
+        outline-color: var( --kendo-coloreditor-colorgradient-focus-outline-color, #{$kendo-coloreditor-colorgradient-focus-outline-color} );
+    }
 }
