--- a/packages/fluent/scss/calendar/_layout.scss
+++ b/packages/fluent/scss/calendar/_layout.scss
@@ -1,4 +1,3 @@
-@use "sass:math";
 @use "../core/color-system" as *;
 @use "../core/mixins" as *;
 @use "_variables.scss" as *;
@@ -9,6 +8,8 @@
 
     // Base
     .k-calendar {
+        inline-size: var( --INTERNAL--kendo-calendar-width, min-content );
+        block-size: var( --INTERNAL--kendo-calendar-height, min-content );
         border-width: var( --kendo-calendar-border-width, #{$kendo-calendar-border-width} );
         border-style: solid;
         box-sizing: border-box;
@@ -41,7 +42,7 @@
 
     // Calendar table
     .k-calendar-table {
-        margin: 0;
+        margin: 0 auto;
         border-width: 0;
         border-color: inherit;
         border-spacing: 0;
@@ -49,8 +50,7 @@
         table-layout: fixed;
         text-align: center;
         outline: 0;
-        display: inline-table;
-        vertical-align: top;
+        display: table;
         position: relative;
         z-index: 1;
     }
@@ -94,8 +94,29 @@
 
     .k-calendar-td {
         @include border-radius( var( --kendo-calendar-cell-border-radius, #{$kendo-calendar-cell-border-radius} ));
+        inline-size: var( --INTERNAL--kendo-calendar-cell-size, min-content );
+        block-size: var( --INTERNAL--kendo-calendar-cell-size, min-content );
         border-color: transparent;
-        font-size: var( --kendo-calendar-cell-font-size, #{$kendo-calendar-cell-font-size} );
+        font-size: var( --INTERNAL--kendo-calendar-cell-font-size, inherit );
+    }
+
+
+    // Calendar cell inner
+    // Remove .k-calendar once we remove k-link
+    .k-calendar .k-calendar-cell-inner {
+        @include border-radius( var( --kendo-calendar-cell-border-radius, #{$kendo-calendar-cell-border-radius} ) );
+        padding-inline: var( --INTERNAL--kendo-calendar-cell-padding-x, 0 );
+        padding-block: var( --INTERNAL--kendo-calendar-cell-padding-y, 0 );
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        white-space: normal;
+        position: relative;
+        overflow: hidden;
     }
 
 
@@ -163,7 +184,7 @@
         padding-inline: var( --kendo-calendar-header-padding-x, #{$kendo-calendar-header-padding-x} );
         padding-block-end: var( --kendo-calendar-view-padding-block-end, #{$kendo-calendar-view-padding-block-end} );
         // setting width / height prevents layout changes in meta views
-        width: $kendo-calendar-view-width;
+        inline-size: var( --INTERNAL--kendo-calendar-view-width, #{$kendo-calendar-view-width});
         min-height: $kendo-calendar-view-height;
         box-sizing: content-box;
         gap: var( --kendo-calendar-view-gap, #{$kendo-calendar-view-gap} );
@@ -173,81 +194,80 @@
 
         .k-link {
             @include border-radius( var( --kendo-calendar-cell-border-radius, #{$kendo-calendar-cell-border-radius} ) );
-            padding-inline: var( --kendo-calendar-cell-padding-x, #{$kendo-calendar-cell-padding-x} );
-            padding-block: var( --kendo-calendar-cell-padding-y, #{$kendo-calendar-cell-padding-y} );
+            padding-inline: var( --INTERNAL--kendo-calendar-cell-padding-x, 0 );
+            padding-block: var( --INTERNAL--kendo-calendar-cell-padding-y, 0 );
+            width: 100%;
+            height: 100%;
             box-sizing: border-box;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
-
+            white-space: normal;
+            position: relative;
+            overflow: hidden;
         }
 
         .k-today .k-link {
             @include border-radius( var( --kendo-calendar-today-border-radius, #{$kendo-calendar-today-border-radius} ) );
         }
     }
-    .k-week-number .k-calendar-view {
-        width: calc( 8 * var( --kendo-calendar-cell-size, #{$kendo-calendar-cell-size} ));
-    }
 
 
     // Month view
+    .k-month-calendar,
     .k-calendar-monthview {
-        $_month-cell-size: var( --kendo-calendar-cell-size, #{$kendo-calendar-cell-size} );
+        $_month-cell-size: $kendo-calendar-cell-size;
 
         .k-calendar-td {
             width: $_month-cell-size;
             height: $_month-cell-size;
-        }
-        .k-link {
-            width: $_month-cell-size;
-            height: $_month-cell-size;
+            inline-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_month-cell-size} );
+            block-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_month-cell-size} );
         }
     }
 
 
     // Year view
+    .k-year-calendar,
     .k-calendar-yearview {
-        $_year-cell-size: calc( math.div(7, 4) * var( --kendo-calendar-cell-size, #{$kendo-calendar-cell-size} ));
+        $_year-cell-size: ( 1.75 * $kendo-calendar-cell-size ); // 7 / 4 => 1.75
 
         .k-calendar-td {
-            width: auto;
-            height: auto;
-        }
-        .k-link {
             width: $_year-cell-size;
             height: $_year-cell-size;
+            inline-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_year-cell-size} );
+            block-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_year-cell-size} );
         }
     }
 
 
     // Decade view
+    .k-decade-calendar,
     .k-calendar-decadeview {
-        $_decade-cell-size: calc( math.div(7, 4) * var( --kendo-calendar-cell-size, #{$kendo-calendar-cell-size} ));
+        $_decade-cell-size: ( 1.75 $kendo-calendar-cell-size ); // 7 / 4 => 1.75
 
         .k-calendar-td {
-            width: auto;
-            height: auto;
-        }
-        .k-link {
             width: $_decade-cell-size;
             height: $_decade-cell-size;
+            inline-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_decade-cell-size} );
+            block-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_decade-cell-size} );
         }
     }
 
 
     // Century view
+    .k-century-calendar,
     .k-calendar-centuryview {
-        $_century-cell-size: calc( math.div(7, 4) * var( --kendo-calendar-cell-size, #{$kendo-calendar-cell-size} ));
+        $_century-cell-size: ( 1.75 * $kendo-calendar-cell-size ); // 7 / 4 => 1.75
 
         .k-calendar-td {
-            width: auto;
-            height: auto;
-        }
-        .k-link {
             width: $_century-cell-size;
             height: $_century-cell-size;
+            inline-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_century-cell-size} );
+            block-size: var( --INTERNAL--kendo-calendar-cell-size, #{$_century-cell-size} );
+        }
+        .k-link {
             text-align: left;
         }
     }
@@ -441,6 +461,51 @@
     }
 
 
+
+
+    // Calendar sizes
+    @each $size, $size-props in $kendo-calendar-sizes {
+        $_font-size: map-get( $size-props, font-size );
+        $_line-height: map-get( $size-props, line-height );
+        $_cell-size: map-get( $size-props, cell-size );
+        $_cell-padding-x: map-get( $size-props, cell-padding-x );
+        $_cell-padding-y: map-get( $size-props, cell-padding-y );
+        $_cell-font-size: map-get( $size-props, cell-font-size );
+
+        $_month-cell-size: $_cell-size;
+        $_year-cell-size: ( 1.75 * $_cell-size ); // 7 / 4 => 1.75
+        $_decade-cell-size: ( 1.75 * $_cell-size ); // 7 / 4 => 1.75
+        $_century-cell-size: ( 1.75 * $_cell-size ); // 7 / 4 => 1.75
+
+        .k-calendar-#{$size} {
+            --INTERNAL--kendo-calendar-view-width: #{8 * $_cell-size};
+            --INTERNAL--kendo-calendar-cell-padding-x: var( --kendo-calendar-#{$size}-cell-padding-x, #{$_cell-padding-x} );
+            --INTERNAL--kendo-calendar-cell-padding-y: var( --kendo-calendar-#{$size}-cell-padding-y, #{$_cell-padding-y} );
+            --INTERNAL--kendo-calendar-cell-font-size: var( --kendo-calendar-#{$size}-cell-font-size, #{$_cell-font-size} );
+            font-size: $_font-size;
+            line-height: $_line-height;
+
+            &.k-month-calendar,
+            .k-calendar-monthview {
+                --INTERNAL--kendo-calendar-cell-size: var( --kendo-calendar-#{$size}-month-cell-size, #{$_month-cell-size} );
+            }
+            &.k-year-calendar,
+            .k-calendar-yearview {
+                --INTERNAL--kendo-calendar-cell-size: var( --kendo-calendar-#{$size}-year-cell-size, #{$_year-cell-size} );
+            }
+            &.k-decade-calendar,
+            .k-calendar-decadeview {
+                --INTERNAL--kendo-calendar-cell-size: var( --kendo-calendar-#{$size}-decade-cell-size, #{$_decade-cell-size} );
+            }
+            &.k-century-calendar,
+            .k-calendar-centuryview {
+                --INTERNAL--kendo-calendar-cell-size: var( --kendo-calendar-#{$size}-century-cell-size, #{$_century-cell-size} );
+            }
+        }
+    }
+
+
+    // RTL
     .k-rtl .k-calendar,
     .k-calendar[dir="rtl"] {
 
