fix(calendar): year, decade and century view cells should be 2x of month cells

--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -192,7 +192,7 @@
     // Year view
     .k-year-calendar,
     .k-calendar-yearview {
-        $_year-cell-size: ( 1.75 * $calendar-cell-size ); // 7 / 4 => 1.75
+        $_year-cell-size: ( 2 * $calendar-cell-size );
 
         .k-calendar-td {
             width: $_year-cell-size;
@@ -206,7 +206,7 @@
     // Decade view
     .k-decade-calendar,
     .k-calendar-decadeview {
-        $_decade-cell-size: ( 1.75 * $calendar-cell-size ); // 7 / 4 => 1.75
+        $_decade-cell-size: ( 2 * $calendar-cell-size );
 
         .k-calendar-td {
             width: $_decade-cell-size;
@@ -220,7 +220,7 @@
     // Century view
     .k-century-calendar,
     .k-calendar-centuryview {
-        $_century-cell-size: ( 1.75 * $calendar-cell-size ); // 7 / 4 => 1.75
+        $_century-cell-size: ( 2 * $calendar-cell-size );
 
         .k-calendar-td {
             width: $_century-cell-size;
@@ -281,9 +281,9 @@
         $_cell-padding-y: map-get( $size-props, cell-padding-y );
 
         $_month-cell-size: $_cell-size;
-        $_year-cell-size: ( 1.75 * $_cell-size ); // 7 / 4 => 1.75
-        $_decade-cell-size: ( 1.75 * $_cell-size ); // 7 / 4 => 1.75
-        $_century-cell-size: ( 1.75 * $_cell-size ); // 7 / 4 => 1.75
+        $_year-cell-size: ( 2 * $_cell-size );
+        $_decade-cell-size: ( 2 * $_cell-size );
+        $_century-cell-size: ( 2 * $_cell-size );
 
         .k-calendar-#{$size} {
             --INTERNAL--kendo-calendar-view-width: #{8 * $_cell-size};
